# University-Mevzuat-Data

./: .gitignore  README.md  pyproject.toml
Dataset/: csv_to_txt.py  data_preprocessing.ipynb  mevzuat_content.py  mevzuat_links.py  university_id.py
Dataset/Data/: mevzuat_links.csv  university_id.json
