[tool.poetry]
name = "University Mevzuat LLM"
version = "0.1.0"
description = ""
authors = ["Yusuf Baykaloğlu <yusuff.baykaloglu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
selenium = "^4.26.1"
bs4 = "^0.0.2"
chromedrivermanager = "^0.0.1"
webdriver-manager = "^4.0.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"